<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/ivDish1"
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/dish1"
        android:scaleType="fitEnd"
        android:src="@drawable/dish" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivDish1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/reset_instruction"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInstruction"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <View
        android:id="@+id/lineEmail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/edtEmail"
        android:layout_alignStart="@+id/edtEmail"
        android:layout_alignEnd="@+id/edtEmail"
        android:layout_marginStart="50dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineEmail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
</RelativeLayout>